--- a/package.json
+++ b/package.json
@@ -11,9 +11,17 @@
   },
   "dependencies": {
     "@react-navigation/native": "^6.0.11",
+    "@react-navigation/stack": "^6.2.2",
+    "axios": "^0.27.2",
+    "intl": "^1.2.5",
     "react": "18.0.0",
     "react-native": "0.69.4",
-    "react-navigation-stack": "react-navigation/stack"
+    "react-native-gesture-handler": "^2.5.0",
+    "react-native-safe-area-context": "^4.3.1",
+    "react-native-screens": "^3.15.0",
+    "react-native-vector-icons": "^9.2.0",
+    "react-navigation-stack": "react-navigation/stack",
+    "styled-components": "^5.3.5"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
