--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@react-navigation/native": "^6.0.11",
     "@react-navigation/stack": "^6.2.2",
     "axios": "^0.27.2",
+    "immer": "^9.0.15",
     "intl": "^1.2.5",
+    "lottie-react-native": "^5.1.4",
     "react": "18.0.0",
     "react-native": "0.69.4",
     "react-native-gesture-handler": "^2.5.0",
@@ -21,6 +23,9 @@
     "react-native-screens": "^3.15.0",
     "react-native-vector-icons": "^9.2.0",
     "react-navigation-stack": "react-navigation/stack",
+    "react-redux": "^8.0.2",
+    "redux": "^4.2.0",
+    "redux-saga": "^1.2.0",
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
